# HuffmanComp

./: CMakeLists.txt  main.cpp
Huffman/: HCompressor.cpp  HCompressor.h  HData.cpp  HData.h
PriorityQueue/: Cell.h  PriorityQueue.h
Tree/: FTree.cpp  FTree.h  Node.h
Utils/: Utils.h
